Hello world lisätty

--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,11 @@
  * user guide available at https://docs.gradle.org/4.4.1/userguide/tutorial_java_projects.html
  */
 
-/*
+
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
+apply plugin: 'application'
+
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -28,4 +30,15 @@ dependencies {
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
 }
-*/
+
+mainClassName = 'Sovellus'
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'Sovellus'
+    }
+}
+
+run {
+    standardInput = System.in
+}
