--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
+project.ext {
+    cucumberVersion = '4.7.4'
+}
+
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -29,6 +33,8 @@ dependencies {
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
+    testCompile 'io.cucumber:cucumber-java:' + cucumberVersion
+    testCompile 'io.cucumber:cucumber-junit:' + cucumberVersion
 }
 
 mainClassName = 'Sovellus'
