--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,19 @@ jar {
         attributes 'Main-Class': 'Sovellus'
     }
 }
+apply plugin: "jacoco" 
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled true
+    }
+    afterEvaluate {
+        classDirectories = files(classDirectories.files.collect {
+            fileTree(dir: it,
+                    exclude: ['main/'])
+        })
+    }
+}
 
 run {
     standardInput = System.in
