--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'io.cucumber:cucumber-java:' + cucumberVersion
     testCompile 'io.cucumber:cucumber-junit:' + cucumberVersion
+    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.8.11'
 }
 
 mainClassName = 'Sovellus'
