Include dependent libraries in the resulting jar file

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,11 @@ jar {
     manifest {
         attributes 'Main-Class': 'Sovellus'
     }
+    from {
+    configurations.compile.collect { it.isDirectory() ? it : zipTree(it)
+    }
+}
+
 }
 
 apply plugin: "jacoco"
