Fix test compatibility issue between Jacoco and Netbeans

--- a/build.gradle
+++ b/build.gradle
@@ -47,5 +47,6 @@ run {
 
 test {
     testLogging.showStandardStreams = true
-    systemProperties System.getProperties()
+    systemProperties['user.dir'] = workingDir
+    // systemProperties System.getProperties()
 }
