--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,5 +39,8 @@ jobs:
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
       # run tests!
+      - run: ./gradlew test
+      - run: ./gradlew check
       - run: ./gradlew jacocoTestReport
       - run: bash <(curl -s https://codecov.io/bash)
+      
