--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,6 @@ run {
 test {
     testLogging.showStandardStreams = true
     systemProperties['user.dir'] = workingDir
-    // systemProperty 'java.awt.headless', 'true'
+    systemProperty 'java.awt.headless', 'true'
     // systemProperties System.getProperties()
 }
