--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
       # run tests!
-#      - run: ./gradlew test
-#      - run: ./gradlew check
+      - run: ./gradlew test
+      - run: ./gradlew check
       - run: ./gradlew jacocoTestReport
       - run: bash <(curl -s https://codecov.io/bash) -t e8a82653-d909-4742-8b99-18b08a40c00d
